src/objects/ArchivedAccount__c.object
<CustomObject>
    <fields>
        <fullName>Account_Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Archived Accounts</relationshipLabel>
        <relationshipName>Archived_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>List_of_Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Provinces</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cust_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Cust Id</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FEIN_Encrypted__c</fullName>
        <label>FEIN Encrypted</label>
        <length>40</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Last_4_Digits_of_FEIN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last 4 Digits of FEIN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Cust_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Cust Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Lock_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SB Lock Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SB_Lock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SB Lock</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Archived Account</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Archived Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Archived Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>